Adjust position of fixed element in style.css

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
   width: 800px;
   margin: 5em auto;
   position: fixed;
-  top: -15px;
-  /* left: 5%; */
+  top: 10%;
+  left: 1%;
   display: flex;
   visibility: hidden;
 }
